--- a/Assignment2ML.ipynb
+++ b/Assignment2ML.ipynb
@@ -1261,8 +1261,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Training the Naïve Bayes model:\n",
-        "# Creating a Gaussian Naïve Bayes classifier\n",
+        "#Training the SVC Model:\n",
+        "# Creating a SVC classifier\n",
         "svm_classifier = SVC()\n",
         "\n",
         "# Training the classifier using the training data\n",
